 -- The flag_access configuration handler would SIGSEGV if a flagname
    was given without a list of permissions.
 -- The power_alias and flag_alias configuration handlers would
    SIGSEGV if flagname and alias were not both given.
 -- If guest_char was a THING instead of a PLAYER, copying the flagset
    of the guest_char wiped the object type (Issue 390).
 -- Fix buffer overflow with %=<> substitution (Issue 406).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.
 -- Added reference counting to global registers which should improve
    performance and greatly reduce memory usage for games which use the
    queue heavily.
 -- Issue 207: Maintain message length in mail bag to avoid touching
    mail body.
 -- Issue 201: Trim priority queue data structures during @dbck to save
    memory.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Increased width of certain columns in @list hashstats (Requests,
    Hits, and Checks) and @list allocations (Allocs).


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().
 -- Updated config.guess, config.sub, and configure to later versions.
 -- Updated to autoconf 2.61.
 -- Refer to tinymux.org instead of tinymux.com.
 -- Added SQL readme (Issue 47).
 -- Updated to doxygen 1.5.1.
 -- Freshened ATTACK, BACKUPS, BETA, CREDITS, NOTES, README, and
    readme.txt.
 -- Documented Lbufref and Regref pools in 'wizhelp @list alloc'.
 -- Increase MAX_ALIASES_PER_PLAYER from 50 to 100.
 -- Fix gcc constant string warnings.
 -- Remove unfinished sqlshared.cpp, sqlshare.h, and sqlslave.cpp.